# mlx-spatial

./: .gitignore  README.md  pyproject.toml
.agent/.automaton/lib/: context.mjs  contracts-data.json  contracts.mjs  state.mjs  status.mjs  validate.mjs
.agent/.automaton/references/: ARTIFACT-LIFECYCLE.md  ROADMAP-CONTRACT.md  SUBAGENT-PROTOCOL.md
.agent/.automaton/state/: current.json  install-manifest.json
.agent/steering/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATUS.md
.agent/wiki/: REPO-MAP.md
.agent/work/2026-05-20-gap-matrix-parity/: INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-05-20-production-pipeline-parity/: INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-05-22-lito-mlx-inference-pipeline/: INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-05-22-mlx-spatial-0-0-1-release-readiness/: PLAN.md  SPEC.md
.agent/work/2026-05-24-docs-coherence-cleanup/: PLAN.md  SPEC.md
.agent/work/2026-05-24-mlx-testing-strategy/: INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-05-24-polish-generation-pipeline-scripts/: INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-05-26-mapanything-mlx-parity-backbone/: INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-05-26-mapanything-mlx-scene-generation/: DESIGN.md  PLAN.md  SPEC.md
.agent/work/2026-05-26-mlx-spatial-0-0-4-release-metadata/: PLAN.md  SPEC.md
.agent/work/2026-05-26-mlx-spatial-mapanything-release-readiness/: INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-05-26-pixal3d-decoder-token-guards/: PLAN.md  SPEC.md
.agent/work/2026-05-26-pixal3d-dinov3-conditioning/: PLAN.md  SPEC.md
.agent/work/2026-05-26-pixal3d-gpu-safe-projection/: PLAN.md  SPEC.md
.agent/work/2026-05-26-pixal3d-latent-decode-boundary/: PLAN.md  SPEC.md
.agent/work/2026-05-26-pixal3d-memory-hygiene/: PLAN.md  SPEC.md
.agent/work/2026-05-26-pixal3d-mesh-export-boundary/: PLAN.md  SPEC.md
.agent/work/2026-05-26-pixal3d-mlx-naf-bridge/: PLAN.md  SPEC.md
.agent/work/2026-05-26-pixal3d-mlx-support/: DESIGN.md  PLAN.md  SPEC.md
.agent/work/2026-05-26-pixal3d-moge-auto-camera/: PLAN.md  SPEC.md
.claude/: settings.json
.codex/: hooks.json
.codex/hooks/: stop.mjs
.github/workflows/: test.yaml  workflow.yaml
.opencode/agents/: automaton-implementer.md  automaton-quality-reviewer.md  automaton-spec-reviewer.md
.opencode/plugins/: automaton.js
docs/: README.md  architecture.md  development.md  hyworld2.md  lito.md  mapanything.md  model-publishing.md  pixal3d.md  release.md  sam3d.md  trellis2.md
model-cards/lito-research-mlx/: README.md
model-cards/sam-3d-objects-mlx/: README.md
scripts/: README.md
scripts/hyworld2/: generate_scene.py
scripts/lito/: generate.py  inspect_quality.py  validate_fixtures.py  write_contract_fixtures.py
scripts/mapanything/: generate_scene.py
scripts/packaging/: check_release_artifacts.py
scripts/pixal3d/: convert_naf.py  generate.py
scripts/sam3d/: inspect_trace.py  reconstruct.py
scripts/spatialkit/: render_glb_visual_parity.cjs
scripts/trellis2/: generate_shape.py  generate_textured.py
src/mlx_spatial/: __init__.py  checkpoint.py  export_utils.py  grid.py  gs_rasterize.py  hyworld2.py  hyworld2_assets.py  hyworld2_camera.py  hyworld2_export.py  hyworld2_geometry.py  hyworld2_grid.py  hyworld2_heads.py  hyworld2_inference.py  hyworld2_layers.py  hyworld2_parity.py  hyworld2_preprocess.py  hyworld2_sh.py  hyworld2_transformer.py  hyworld2_vit.py  hyworld2_worldmirror.py  lito.py  lito_assets.py  lito_condition.py  lito_dit.py  lito_inference.py  lito_real_backend.py  lito_render.py  lito_tokenizer.py  mapanything.py  mapanything_assets.py  mapanything_geometry.py  mapanything_heads.py  mapanything_inference.py  mapanything_model.py  mapanything_parity.py  mapanything_preprocess.py  mapanything_scene.py  mesh_to_fdg.py  mlx_memory.py  model_assets.py  (+44 more)
tests/: README.md  conftest.py  pixal3d_fixtures.py  test_bootstrap.py  test_checkpoint.py  test_grid.py  test_gs_rasterize.py  test_hyworld2_assets.py  test_hyworld2_export.py  test_hyworld2_grid.py  test_hyworld2_heads.py  test_hyworld2_inference.py  test_hyworld2_layers.py  test_hyworld2_parity.py  test_hyworld2_preprocess.py  test_hyworld2_tools.py  test_hyworld2_transformer.py  test_hyworld2_utils.py  test_hyworld2_worldmirror.py  test_lito_assets.py  test_lito_cli.py  test_lito_condition.py  test_lito_dit.py  test_lito_inference.py  test_lito_memory_limits.py  test_lito_quality.py  test_lito_real_backend.py  test_lito_render.py  test_lito_tokenizer.py  test_mapanything_assets.py  test_mapanything_full_encoder_parity.py  test_mapanything_geometry.py  test_mapanything_heads.py  test_mapanything_heads_parity.py  test_mapanything_inference.py  test_mapanything_info_sharing.py  test_mapanything_info_sharing_parity.py  test_mapanything_model.py  test_mapanything_parity.py  test_mapanything_preprocess.py  (+60 more)
tools/: hyworld2_debug_dense_head_parity.py  hyworld2_debug_vgt_parity.py  hyworld2_dump_torch_reference.py  mapanything_dump_torch_reference.py  mapanything_dump_torch_scene_reference.py  pixal3d_dump_torch_reference.py
(+454 files in other folders)
