[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-spatial"
version = "0.1.0"
description = "MLX-first primitives for 3D and spatial model inference."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx",
    "numpy",
    "pillow>=12.2.0",
    "safetensors",
]

[dependency-groups]
dev = [
    "huggingface-hub>=0.36",
    "pytest>=8",
]

[project.scripts]
mlx-spatial-trellis2 = "mlx_spatial.trellis2:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_spatial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "torch_parity: optional parity checks against the local PyTorch checkout",
]
