[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-spatial"
version = "0.0.2"
description = "MLX-first primitives for 3D and spatial model inference."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "AppAutomaton" }]
urls = { Repository = "https://github.com/appautomaton/mlx-spatial" }
requires-python = ">=3.11"
dependencies = [
    "fast-simplification>=0.1.13",
    "mlx",
    "numpy",
    "pillow>=12.2.0",
    "pyyaml>=6.0",
    "safetensors",
    "scipy>=1.17.1",
    "xatlas>=0.0.11",
]

[dependency-groups]
dev = [
    "huggingface-hub>=0.36",
    "plyfile>=1.1",
    "pt-safe-loader>=0.1.4",
    "pytest>=8",
]

[project.scripts]
mlx-spatial-trellis2 = "mlx_spatial.trellis2:main"
mlx-spatial-hyworld2 = "mlx_spatial.hyworld2:main"
mlx-spatial-sam3d = "mlx_spatial.sam3d:main"
mlx-spatial-lito = "mlx_spatial.lito:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_spatial"]

[tool.hatch.build.targets.sdist]
include = [
    "/.github",
    "/LICENSE",
    "/README.md",
    "/docs",
    "/pyproject.toml",
    "/scripts",
    "/src",
    "/tests",
    "/uv.lock",
]
exclude = [
    "/.agent",
    "/.claude",
    "/.codex",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.venv",
    "/dist",
    "/inputs",
    "/outputs",
    "/vendors",
    "/weights",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "torch_parity: optional parity checks against the local PyTorch checkout",
]
