[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-spatial"
version = "0.0.3.dev0"
description = "MLX-first primitives for 3D and spatial model inference."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "AppAutomaton" }]
urls = { Repository = "https://github.com/appautomaton/mlx-spatial" }
requires-python = ">=3.11"
dependencies = [
    "fast-simplification>=0.1.13",
    "mlx",
    "numpy",
    "pillow>=12.2.0",
    "pyyaml>=6.0",
    "safetensors",
    "scipy>=1.17.1",
    "xatlas>=0.0.11",
]

[dependency-groups]
dev = [
    "huggingface-hub>=0.36",
    "plyfile>=1.1",
    "pt-safe-loader>=0.1.4",
    "pytest>=8",
]
torch-ref = [
    "einops; python_version == '3.13'",
    "hydra-core; python_version == '3.13'",
    "opencv-python-headless==4.10.0.84; python_version == '3.13'",
    "pillow-heif; python_version == '3.13'",
    "torch==2.12.0rc3+m5max; python_version == '3.13'",
    "torchvision==0.27.0+m5max; python_version == '3.13'",
    "uniception==0.1.7; python_version == '3.13'",
]
torch-build = [
    "ninja>=1.13; python_version == '3.13'",
    "packaging>=25; python_version == '3.13'",
    "setuptools<82; python_version == '3.13'",
    "wheel>=0.45; python_version == '3.13'",
]

[tool.uv]
environments = [
    "python_version == '3.13' and sys_platform == 'darwin' and platform_machine == 'arm64'",
]
override-dependencies = [
    "torch==2.12.0rc3+m5max",
]

[tool.uv.sources]
torch = { path = "../../ai-frameworks/pytorch/dist/m5max/torch-2.12.0rc3+m5max-cp313-cp313-macosx_26_0_arm64.whl" }
torchvision = { path = "../../ai-frameworks/torchvision/dist/m5max/torchvision-0.27.0+m5max-cp313-cp313-macosx_26_0_arm64.whl" }

[project.scripts]
mlx-spatial-trellis2 = "mlx_spatial.trellis2:main"
mlx-spatial-hyworld2 = "mlx_spatial.hyworld2:main"
mlx-spatial-sam3d = "mlx_spatial.sam3d:main"
mlx-spatial-lito = "mlx_spatial.lito:main"
mlx-spatial-mapanything = "mlx_spatial.mapanything:main"
mlx-spatial-pixal3d = "mlx_spatial.pixal3d:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_spatial"]

[tool.hatch.build.targets.sdist]
include = [
    "/.github",
    "/LICENSE",
    "/README.md",
    "/docs",
    "/pyproject.toml",
    "/scripts",
    "/src",
    "/tests",
    "/uv.lock",
]
exclude = [
    "/.agent",
    "/.claude",
    "/.codex",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.venv",
    "/dist",
    "/inputs",
    "/outputs",
    "/vendors",
    "/weights",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not heavy'"
markers = [
    "heavy: opt-in tests that load real weights, require Metal, or use large tensors",
    "torch_parity: optional parity checks against the local PyTorch checkout",
]
